--- a/demo/dev.html
+++ b/demo/dev.html
@@ -10,23 +10,23 @@
     <script type='module'>
         const object = {
             stringProp: 'string',
-            numberProp: 1,
-            booleanProp: true,
-            subObject: {
-                stringProp2: 'string2',
-                numberProp2: 2,
-                booleanProp2: false,
-            },
-            arrayProp: [
-                'string',
-                1,
-                true,
-                {
-                    stringProp3: 'string3',
-                    numberProp3: 3,
-                    booleanProp3: false,
-                },
-            ],
+            // numberProp: 1,
+            // booleanProp: true,
+            // subObject: {
+            //     stringProp2: 'string2',
+            //     numberProp2: 2,
+            //     booleanProp2: false,
+            // },
+            // arrayProp: [
+            //     'string',
+            //     1,
+            //     true,
+            //     {
+            //         stringProp3: 'string3',
+            //         numberProp3: 3,
+            //         booleanProp3: false,
+            //     },
+            // ],
         };
 
         const {o2h} = await import('../o2h.js');
