--- a/demo/dev.html
+++ b/demo/dev.html
@@ -12,12 +12,12 @@
         const object = {
             stringProp: 'string',
             numberProp: 1,
-            // booleanProp: true,
-            // subObject: {
-            //     stringProp2: 'string2',
-            //     numberProp2: 2,
-            //     booleanProp2: false,
-            // },
+            booleanProp: true,
+            subObject: {
+                stringProp2: 'string2',
+                numberProp2: 2,
+                booleanProp2: false,
+            },
             // arrayProp: [
             //     'string',
             //     1,
