--- a/demo/dev.html
+++ b/demo/dev.html
@@ -18,16 +18,16 @@
                 numberProp2: 2,
                 booleanProp2: false,
             },
-            // arrayProp: [
-            //     'string',
-            //     1,
-            //     true,
-            //     {
-            //         stringProp3: 'string3',
-            //         numberProp3: 3,
-            //         booleanProp3: false,
-            //     },
-            // ],
+            arrayProp: [
+                'string',
+                1,
+                true,
+                {
+                    stringProp3: 'string3',
+                    numberProp3: 3,
+                    booleanProp3: false,
+                },
+            ],
         };
 
         const {o2h} = await import('../o2h.js');
