--- a/demo/dev.html
+++ b/demo/dev.html
@@ -41,5 +41,10 @@
             target.innerHTML = arr.join('');
         });
     </script>
+    <style>
+        label{
+            display:block;
+        }
+    </style>
 </body>
 </html>
