--- a/demo/dev.html
+++ b/demo/dev.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     <div id='target'></div>
+    <script type='importmap'>
+        {
+            "imports":{
+                "may-it-be/": "../node_modules/may-it-be/"
+            }
+        }
+    </script>
     <script type='module'>
         const object = {
             stringProp: 'string',
