--- a/demo/dev.html
+++ b/demo/dev.html
@@ -40,7 +40,7 @@
         const {o2h} = await import('../o2h.js');
         const arr = [];
         const stringWriter = (s) => {
-            console.log(s);
+            //console.log(s);
             arr.push(s);
         }
         const instance = o2h(object, stringWriter);
